--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <p class="navbar-brand">Kanban</p>
+    <p><a href="/issue_list" class="navbar-brand">Kanban</a></p>
     <ul class="navbar-nav">
         <li class="nav-item active">
             <a class="nav-link" href="/issue_list">Issues</a>
